--- a/package.json
+++ b/package.json
@@ -6,30 +6,28 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
     "react": "18.2.0",
     "react-native": "0.73.0",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/bottom-tabs": "^6.5.11",
-    "@react-navigation/stack": "^6.3.20",
-    "@react-navigation/native-stack": "^6.9.17",
-    "react-native-screens": "^3.27.0",
-    "react-native-safe-area-context": "^4.8.2",
-    "react-native-gesture-handler": "^2.14.0",
-    "react-native-reanimated": "^3.6.1",
-    "zustand": "^4.4.7",
-    "react-native-vector-icons": "^10.0.3",
-    "@react-native-async-storage/async-storage": "^1.21.0",
-    "react-native-linear-gradient": "^2.8.3",
-    "react-native-image-picker": "^7.0.3",
     "react-native-calendars": "^1.1304.0",
     "react-native-date-picker": "^4.3.3",
+    "react-native-gesture-handler": "^2.12.0",
+    "react-native-image-picker": "^7.0.3",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "^1.7.1",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^3.22.1",
+    "react-native-svg": "^14.0.0",
+    "react-native-vector-icons": "^10.0.3",
     "react-native-wallet-passes": "^1.0.0",
-    "react-native-maps": "^1.8.0",
-    "react-native-svg": "^14.0.0"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
@@ -39,16 +37,11 @@
     "@react-native/metro-config": "^0.73.2",
     "@react-native/typescript-config": "^0.73.1",
     "@types/react": "^18.2.45",
-    "@types/react-test-renderer": "^18.0.7",
-    "babel-jest": "^29.7.0",
     "eslint": "^8.55.0",
-    "jest": "^29.7.0",
     "prettier": "^3.1.1",
-    "react-test-renderer": "18.2.0",
     "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18"
   }
 }
-
